# NeuralNetworksFromScratch

./: .gitignore  CMakeLists.txt
NeuralNetworksFromScratch/: CMakeLists.txt  NeuralNetworksFromScratch.cpp  NeuralNetworksFromScratch.h  linear.cpp  linear.h  math.h  model.cpp  model.h  neuron.cpp  neuron.h  reader.cpp  reader.h  value.h
